WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161851
Start using Document::pageCacheState() instead of Document::inPageCache()
https://bugs.webkit.org/show_bug.cgi?id=161851
Summary
Start using Document::pageCacheState() instead of Document::inPageCache()
Chris Dumez
Reported
2016-09-11 15:27:55 PDT
Start using Document::pageCacheState() instead of Document::inPageCache() as the latter is confusing.
Attachments
Patch
(6.84 KB, patch)
2016-09-11 15:29 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-09-11 15:29:40 PDT
Created
attachment 288534
[details]
Patch
WebKit Commit Bot
Comment 2
2016-09-12 02:28:24 PDT
Comment on
attachment 288534
[details]
Patch Clearing flags on attachment: 288534 Committed
r205805
: <
http://trac.webkit.org/changeset/205805
>
WebKit Commit Bot
Comment 3
2016-09-12 02:28:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug